@@ -199,7 +199,7 @@
       <applyto>/apps/procman/cpu_color</applyto>
       <owner>procman</owner>
       <type>string</type>
-      <default>#0072B3</default>
+      <default>#00A2FF</default>
       <locale name="C">
         <short>Default graph cpu color</short>
         <long></long>
@@ -211,7 +211,7 @@
       <applyto>/apps/procman/cpu_color1</applyto>
       <owner>procman</owner>
       <type>string</type>
-      <default>#0072B3</default>
+      <default>#00A2FF</default>
       <locale name="C">
         <short>Default graph cpu color</short>
         <long></long>
@@ -247,7 +247,7 @@
       <applyto>/apps/procman/mem_color</applyto>
       <owner>procman</owner>
       <type>string</type>
-      <default>#00B35B</default>
+      <default>#00FF82</default>
       <locale name="C">
         <short>Default graph mem color</short>
         <long></long>
@@ -259,7 +259,7 @@
       <applyto>/apps/procman/swap_color</applyto>
       <owner>procman</owner>
       <type>string</type>
-      <default>#8B00C3</default>
+      <default>#B600FF</default>
       <locale name="C">
         <short>Default graph swap color</short>
         <long></long>
@@ -271,7 +271,7 @@
       <applyto>/apps/procman/net_in_color</applyto>
       <owner>procman</owner>
       <type>string</type>
-      <default>#00B35B</default>
+      <default>#00F2F2</default>
       <locale name="C">
         <short>Default graph net in color</short>
         <long></long>
@@ -283,7 +283,7 @@
       <applyto>/apps/procman/net_out_color</applyto>
       <owner>procman</owner>
       <type>string</type>
-      <default>#8B00C3</default>
+      <default>#F200C1</default>
       <locale name="C">
         <short>Default graph net out color</short>
         <long></long>
