@@ -1,3 +1,11 @@
+2005-06-13  Martin Ejdestig  <mejde@dtek.chalmers.se>
+
+	* procman.c (procman_data_new): 
+	* src/gnome-system-monitor.schemas.in:
+	Modified default colors to be a little brighter. Closes #305877.
+	
+	Reviewed by Benoît Dejean  <TazForEver@dlfp.org>.	
+
 2005-06-12  Benoît Dejean  <TazForEver@dlfp.org>
 
 	* src/callbacks.c: (cb_timeout), (cb_radio_processes):
